objects/ESC_ServiceNow_Scheduler_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store the Interval,batchsize and current job id of the service now staging scheduler</description>
    <fields>
        <fullName>ESC_BatchSchedule_Interval__c</fullName>
        <label>BatchSchedule Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_BatchSize__c</fullName>
        <label>ESC_BatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Current_Job_ID__c</fullName>
        <description>Stores the latest job Id</description>
        <label>Current Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EmailBody__c</fullName>
        <label>FailureMail-Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_From_Address__c</fullName>
        <label>FailureMail-From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_No_Of_Retries__c</fullName>
        <label>NoOfRetries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Query_Limit__c</fullName>
        <description>Specifies batch size for the job</description>
        <label>Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Subject__c</fullName>
        <label>FailureMail-Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_To_Address__c</fullName>
        <inlineHelpText>Email Addresses seperated as CSV(Comma Seperated Values)</inlineHelpText>
        <label>FailureMail-To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ServiceNow Scheduler Settings</label>
</CustomObject>